--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     <a href="" class="text-muted">培训师</a>
                 </div>
                 <div class="top-bar-4 col-md-3">
-                    <button type="button" class="btn btn-success"></button>
+                    <a type="button" class="btn btn-success btn-sm"> 免费注册</a>
+                    <a >立即登录</a>
                 </div>
             </div>
         </div>
