--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body style="height: 3000px;">
 <!--------------------------------头部-Begin------------------------------------>
 <header id="R_header">
-    <!-- 上部分 -->
+    <!-- 上部分开始 -->
     <div class="top-bar d-none d-sm-none d-md-none d-lg-block text-center text-muted">
         <div class="container">
             <div class="row">
@@ -37,6 +37,9 @@
             </div>
         </div>
     </div>
+    <!-- 上部分结束 -->
+
+
     <!-- 下部分 -->
     <nav class="navbar navbar-expand-lg navbar-light navbar_neck">
         <div class="container">
@@ -90,14 +93,14 @@
             <li data-target="#R_carouse_1" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
-            <div class="carousel-item active">
-            <img src="icon/1.jpeg" alt="...">
+            <div class="carousel-item active" data-sm-img = "icon/sm1.jpeg" data-lg-img = "icon/lg1.jpg">
+            <!-- <img src="icon/lg1.jpg" alt="..."> -->
         </div>
-        <div class="carousel-item">
-            <img src="icon/2.jpeg" alt="...">
+        <div class="carousel-item" data-sm-img = "icon/sm2.jpg" data-lg-img = "icon/lg2.jpeg">
+            <!-- <img src="icon/lg2.jpeg" alt="..."> -->
         </div>
-        <div class="carousel-item">
-            <img src="icon/3.jpeg" alt="...">
+        <div class="carousel-item" data-sm-img = "icon/sm3.jpg" data-lg-img = "icon/lg3.jpeg">
+            <!-- <img src="icon/lg3.jpeg" alt="..."> -->
         </div>
         </div>
         <a class="carousel-control-prev" href="#R_carouse_1" role="button" data-slide="prev">
