--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <!-- -----------------------------轮播图-end-------------------------------------->
 
 <!--------------------------------热门课程-Begin------------------------------------>
-<section id="R_hot"></section>
+<section id="R_hot">热门课程</section>
 <!-- -----------------------------热门课程-end-------------------------------------->
 
 
