--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- 样式 -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-	<title>bootstrap4-常用组件</title>
+	<title>bootstrap4-项目实战</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body style="height: 3000px;">
@@ -94,13 +94,10 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active" data-sm-img = "icon/sm1.jpeg" data-lg-img = "icon/lg1.jpg">
-            <!-- <img src="icon/lg1.jpg" alt="..."> -->
         </div>
         <div class="carousel-item" data-sm-img = "icon/sm2.jpg" data-lg-img = "icon/lg2.jpeg">
-            <!-- <img src="icon/lg2.jpeg" alt="..."> -->
         </div>
         <div class="carousel-item" data-sm-img = "icon/sm3.jpg" data-lg-img = "icon/lg3.jpeg">
-            <!-- <img src="icon/lg3.jpeg" alt="..."> -->
         </div>
         </div>
         <a class="carousel-control-prev" href="#R_carouse_1" role="button" data-slide="prev">
@@ -116,7 +113,9 @@
 <!-- -----------------------------轮播图-end-------------------------------------->
 
 <!--------------------------------热门课程-Begin------------------------------------>
-<section id="R_hot">热门课程</section>
+<section id="R_hot">
+    
+</section>
 <!-- -----------------------------热门课程-end-------------------------------------->
 
 
@@ -129,9 +128,9 @@
 <section id="R_About"></section>
 <!-- -----------------------------about us-end-------------------------------------->
 
-<!--------------------------------头部-Begin------------------------------------>
+<!--------------------------------尾部-Begin------------------------------------>
 <footer id="R_footer"></footer>
-<!-- -----------------------------头部-end-------------------------------------->
+<!-- -----------------------------尾部-end-------------------------------------->
 
 
 	<script src="js/jquery-3.3.1.js"></script>
