--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-8">
-                                左边 
+                                <img src="icon/ewm.jpg" class="" width="">
                             </div>
                             <div class="col-md-4">
                                 右边
@@ -252,7 +252,6 @@
         
                             </div>
                             <div class="col-md-8">
-                                        
                             </div>
                         </div>
                     </div>
