--- a/index.html
+++ b/index.html
@@ -237,7 +237,10 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-8">
-                                <img src="icon/ewm.jpg" class="" width="">
+                                <img src="icon/ewm.jpg" class="" style="width: 140px;">
+                                <p class="text-muted">更多资讯欢迎<br>关注撩课学院</p>
+                                <h5 class="alert-secondary">HTML5+全栈/Python+人工智能/JavaEE+大数据</h5>
+                                <h2 class="text-"><b>欢迎来到IT人的在线大学<span class="text-danger"> /</span> 撩课学院 <span class = "text-danger"> /</span></b></h2>
                             </div>
                             <div class="col-md-4">
                                 右边
