--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                                 <h2 class="text-"><b>欢迎来到IT人的在线大学<span class="text-danger"> /</span> 撩课学院 <span class = "text-danger"> /</span></b></h2>
                             </div>
                             <div class="col-md-4">
-                                右边
+                                <img src="" alt="">
                             </div>
                         </div>
                     </div>
