--- a/index.html
+++ b/index.html
@@ -312,14 +312,14 @@
 <!-- -----------------------------about us-end-------------------------------------->
 
 <!--------------------------------友情链接-Begin------------------------------------>
-<footer id="R_footer">
+<section id="Fl" class = "d-none d-md-none d-lg-block ">
      <!-- 标题 -->
      <div class="text-center mt-3 mb-3">
             <h2><strong>友情链接</strong></h2>
     </div>
     <div class="container">
         <div class="row mt-4 d-flex justify-content-around align-items-center">
-            <ul class="nav nav-tabs friendsLink text-center" id="myTab" role="tablist ">
+            <ul class="nav nav-tabs friendsLink text-center pb-3" id="myTab" role="tablist ">
                 <li class="nav-item mr-lg-5 mr-sm-2 mr-md-3"><img src="icon/华为.png" alt=""></li>
                 <li class="nav-item mr-lg-5 mr-sm-2 mr-md-3"><img src="icon/facebook.png" alt=""></li>
                 <li class="nav-item mr-lg-5 mr-sm-2 mr-md-3"><img src="icon/ins.png" alt=""></li>
@@ -330,8 +330,40 @@
             </ul>
         </div>
     </div>
-</footer class="mb-5">
-<!-- -----------------------------尾部-end-------------------------------------->
+</section>
+<!-- -----------------------------友情链接-end-------------------------------------->
+
+<!-- -----------------------------友情链接-Begin-------------------------------------->
+<footer class="mt-3">
+    <div class="container text-muted border-top pt-3">
+        <div class="row">
+            <div class="col-lg-4 d-none d-sm-none d-md-none d-lg-block">
+                <div class="row ">
+                    <ul class="offset-2 col-lg-4">
+                        <li>关于我们</li>
+                        <li>课程介绍</li>
+                        <li>热门课程</li>
+                    </ul>
+                    <ul class="col-lg-6">
+                        <li>名师授课</li>
+                        <li>课堂互动</li>
+                        <li>联系我们</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-5 text-center">
+                <h6>公司地址：河南省郑州市金水区河南职业技术学院</h6>
+                <h6>联系电话：17630345000</h6>
+                <h6>E-Mail：2788696894@qq.com</h6>
+            </div>
+            <div class="col-lg-3 d-none d-sm-none d-md-none d-lg-block">
+                <i class="iconfont">&#xe666;</i>
+                <i class="iconfont">&#xe73b;</i>
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- -----------------------------友情链接-end-------------------------------------->
 
 
 	<script src="js/jquery-3.3.1.js"></script>
