--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     </div>
     <div class="container">
         <div class="row mt-4 d-flex justify-content-around align-items-center">
-            <ul class="nav nav-tabs friendsLink text-center pb-3" id="myTab" role="tablist ">
+            <ul class="nav friendsLink text-center pb-3" id="myTab" role="tablist ">
                 <li class="nav-item mr-lg-5 mr-sm-2 mr-md-3"><img src="icon/华为.png" alt=""></li>
                 <li class="nav-item mr-lg-5 mr-sm-2 mr-md-3"><img src="icon/facebook.png" alt=""></li>
                 <li class="nav-item mr-lg-5 mr-sm-2 mr-md-3"><img src="icon/ins.png" alt=""></li>
@@ -334,7 +334,7 @@
 <!-- -----------------------------友情链接-end-------------------------------------->
 
 <!-- -----------------------------友情链接-Begin-------------------------------------->
-<footer class="mt-3">
+<footer>
     <div class="container text-muted border-top pt-3">
         <div class="row">
             <div class="col-lg-4 d-none d-sm-none d-md-none d-lg-block">
@@ -351,12 +351,12 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-5 text-center">
+            <div class="col-lg-4 text-center">
                 <h6>公司地址：河南省郑州市金水区河南职业技术学院</h6>
                 <h6>联系电话：17630345000</h6>
                 <h6>E-Mail：2788696894@qq.com</h6>
             </div>
-            <div class="col-lg-3 d-none d-sm-none d-md-none d-lg-block">
+            <div class="col-lg-4 d-none d-sm-none d-md-none d-lg-block">
                 <i class="iconfont">&#xe666;</i>
                 <i class="iconfont">&#xe73b;</i>
             </div>
