--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 <!--------------------------------产品中心-Begin------------------------------------>
 <section id="product" style="overflow: hidden;">
     <div class="container">
-        <div class="row" ">
+        <div class="row" data-spy="scroll" data-target="myTab">
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item">
                     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">在线大学</a>
